[package]
name = "memfill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
duration-str = "0.11"
strum_macros = "0.26"
strum = { version = "0.26", features = ["derive"] }
bytesize = { version = "1.3 ", default-features = false }
procfs = { version = "0.16 ", default-features = false }
nix = { version = "0.29.0", features = ["signal", "feature", "user"] }
rand = "0.9.0-alpha.2"
